Flex wrap fix

--- a/main.css
+++ b/main.css
@@ -143,6 +143,7 @@ body {
 	list-style-type: none;
 	display: flex;
 	flex-direction: row;
+	flex-wrap: wrap;
 }
 
 .blog ul li {
